# Educational_Platform

./: .env  eas.json  expo-router.d.ts  metro.config.js  package-lock.json  package.json  tsconfig.json
.history/: .gitignore_20250509234931  .gitignore_20250509234933  .gitignore_20250509234935  .gitignore_20250509234952  .gitignore_20250509234954  .gitignore_20250509234955  .gitignore_20250509234958  app_20250509141356.json  app_20250509231235.json  app_20250509231237.json  app_20250509231242.json  app_20250509231243.json  app_20250509231246.json  app_20250509231320.json  app_20250509231355.json  app_20250509232409.json  app_20250509234848.json  app_20250509234852.json  app_20250509234853.json  app_20250509234856.json  app_20250509235101.json  app_20250509235106.json  app_20250510000810.json  app_20250510000812.json  app_20250510000816.json  app_20250510000818.json  app_20250510000821.json  app_20250510000823.json  app_20250510000824.json  app_20250510000829.json  app_20250510000835.json  app_20250510000837.json  app_20250510000840.json  app_20250510000843.json  app_20250510000845.json  app_20250510000846.json  app_20250510000850.json  app_20250510000854.json  app_20250510001050.json  app_20250510001217.json  (+48 more)
.history/app/: cart_20250509151026.tsx  cart_20250509151034.tsx  cart_20250509151045.tsx  (+287 more)
android/: build.gradle
android/app/: CMakeLists.txt  build.gradle
app/: CourseListing.tsx  _layout.tsx  cart.tsx  courseDetails.tsx  index.tsx  payment.tsx
config/: FirebaseConfig.ts
constant/: Prompt.tsx
context/: CartContext.tsx  UserDetailContext.tsx
(+238 files in other folders)
